WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38595
REGRESSION(
r57969
) Image decoder is repeatedly destroyed/created in CoreGraphics-based Windows WebKit
https://bugs.webkit.org/show_bug.cgi?id=38595
Summary
REGRESSION(r57969) Image decoder is repeatedly destroyed/created in CoreGraph...
Steve Falkenburg
Reported
2010-05-05 10:45:49 PDT
Image decoder is repeatedly destroyed/created in CoreGraphics-based Windows WebKit
Attachments
Patch
(1.45 KB, patch)
2010-05-05 11:00 PDT
,
Steve Falkenburg
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Falkenburg
Comment 1
2010-05-05 11:00:51 PDT
Created
attachment 55140
[details]
Patch
Maciej Stachowiak
Comment 2
2010-05-05 11:28:25 PDT
Comment on
attachment 55140
[details]
Patch r=me
Steve Falkenburg
Comment 3
2010-05-05 11:36:43 PDT
Committed
r58831
: <
http://trac.webkit.org/changeset/58831
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug