2010-05-05  Steve Falkenburg  <sfalken@apple.com>

Reviewed by Maciej Stachowiak.

        REGRESSION(r57969) Image decoder is repeatedly destroyed/created in CoreGraphics-based Windows WebKit
        https://bugs.webkit.org/show_bug.cgi?id=38595

        * platform/graphics/cg/ImageSourceCG.cpp:
        (WebCore::ImageSource::setData):


Canonical link: https://commits.webkit.org/50083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58831 268f45cc-cd09-0410-ab3c-d52691b4dbfc